--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <div class="correct"></div>
             <div class="incorrect"></div>
             <div class="unanswered"></div>
+            <div class="result"></div>
 
 
         <script src="assets/javascript/app.js" type="text/javascript"></script>
