--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <div class="jumbotron jumbotron-fluid">
         <div class="container">
         <div id="game">
-          <h2>Trivia Game</h2>
+          <h2>Trivia about me</h2>
           <p id="countdown" class="lead">Remaining Time: <span id="timer"></span></p>
           <p id="question" class="lead"></p>
         </div>
